// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewBody render render 1`] = `
<DocumentFragment>
  <div
    class="detailsViewBody"
  >
    <div
      class="detailsViewBodyNavContentLayout"
    >
      <mock-fluentsidenav
        assessmentstoredata="[object Object]"
        automatedcheckscardsviewdata="[object Object]"
        clickhandlerfactory="[object Object]"
        datatransferviewstoredata="[object Object]"
        deps="[object Object]"
        detailsviewstoredata="[object Object]"
        featureflagstoredata="[object Object]"
        issidenavopen="false"
        narrowmodestatus="[object Object]"
        rightpanelconfiguration="[object Object]"
        scanmetadata="[object Object]"
        selectedpivot="0"
        selectedtest="-1"
        switchernavconfiguration="[object Object]"
        tabstopsviewstoredata="[object Object]"
        tabstoredata="[object Object]"
        visualizationconfigurationfactory="[object Object]"
        visualizationscanresultdata="[object Object]"
        visualizationstoredata="[object Object]"
      />
      <div
        class="detailsViewContentPaneContainer"
      >
        <mock-quickassesscommandbar
          assessmentstoredata="[object Object]"
          automatedcheckscardsviewdata="[object Object]"
          clickhandlerfactory="[object Object]"
          datatransferviewstoredata="[object Object]"
          deps="[object Object]"
          detailsviewstoredata="[object Object]"
          featureflagstoredata="[object Object]"
          issidenavopen="false"
          narrowmodestatus="[object Object]"
          rightpanelconfiguration="[object Object]"
          scanmetadata="[object Object]"
          selectedtest="-1"
          switchernavconfiguration="[object Object]"
          tabstopsviewstoredata="[object Object]"
          tabstoredata="[object Object]"
          visualizationconfigurationfactory="[object Object]"
          visualizationscanresultdata="[object Object]"
          visualizationstoredata="[object Object]"
        />
        <div
          class="detailsViewBodyContentPane"
        >
          <mock-targetpagehiddenbar
            istargetpagehidden="false"
          />
          <div
            class="view"
            role="main"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailsViewBody render render: FluentSideNav props 1`] = `
{
  "assessmentStoreData": {
    "assessmentNavState": {
      "selectedTestSubview": "sample test step",
    },
    "assessments": {
      "assessment": {
        "fullAxeResultsMap": {},
        "generatedAssessmentInstancesMap": {},
        "manualTestStepResultMap": {},
        "testStepStatus": {
          "step-1": {
            "isStepScanned": false,
            "stepFinalResult": 1,
          },
        },
      },
    },
    "persistedTabInfo": {},
    "resultDescription": "",
  },
  "automatedChecksCardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "clickHandlerFactory": {},
  "dataTransferViewStoreData": {
    "showQuickAssessToAssessmentConfirmDialog": true,
  },
  "deps": {
    "detailsViewActionMessageCreator": {},
  },
  "detailsViewStoreData": {
    "detailsViewRightContentPanel": "Overview",
  },
  "featureFlagStoreData": {},
  "isSideNavOpen": false,
  "narrowModeStatus": {
    "isHeaderAndNavCollapsed": false,
  },
  "onRightPanelContentSwitch": [Function],
  "rightPanelConfiguration": {
    "RightPanel": [Function],
  },
  "scanMetadata": {
    "targetAppInfo": {
      "name": "name",
      "url": "url",
    },
  },
  "selectedPivot": 0,
  "selectedTest": -1,
  "setSideNavOpen": [Function],
  "switcherNavConfiguration": {
    "CommandBar": [MockFunction] {
      "calls": [
        [
          {
            "assessmentStoreData": {
              "assessmentNavState": {
                "selectedTestSubview": "sample test step",
              },
              "assessments": {
                "assessment": {
                  "fullAxeResultsMap": {},
                  "generatedAssessmentInstancesMap": {},
                  "manualTestStepResultMap": {},
                  "testStepStatus": {
                    "step-1": {
                      "isStepScanned": false,
                      "stepFinalResult": 1,
                    },
                  },
                },
              },
              "persistedTabInfo": {},
              "resultDescription": "",
            },
            "automatedChecksCardsViewData": {
              "allCardsCollapsed": true,
              "cards": {
                "fail": [
                  {
                    "description": "sample-description",
                    "guidance": [
                      {
                        "href": "sample-guidance-href",
                        "text": "sample-guidance-text",
                      },
                    ],
                    "id": "some-rule",
                    "nodes": [
                      {
                        "descriptors": {
                          "snippet": "this is a sample snippet",
                        },
                        "identifiers": {
                          "conciseName": "body img",
                          "css-selector": "body img",
                          "identifier": "body img",
                        },
                        "resolution": {
                          "how-to-fix-web": {
                            "all": [],
                            "any": [
                              "Element does not have an alt attribute",
                              "aria-label attribute does not exist or is empty",
                              "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                            ],
                            "none": [],
                          },
                          "howToFixSummary": "sample how to fix summary",
                        },
                        "ruleId": "image-alt",
                        "status": "fail",
                        "uid": "some-guid-here",
                      },
                    ],
                    "url": "sample-url",
                  },
                ],
                "inapplicable": [],
                "pass": [],
                "unknown": [],
              },
              "visualHelperEnabled": true,
            },
            "clickHandlerFactory": {},
            "dataTransferViewStoreData": {
              "showQuickAssessToAssessmentConfirmDialog": true,
            },
            "deps": {
              "detailsViewActionMessageCreator": {},
            },
            "detailsViewStoreData": {
              "detailsViewRightContentPanel": "Overview",
            },
            "featureFlagStoreData": {},
            "isSideNavOpen": false,
            "narrowModeStatus": {
              "isHeaderAndNavCollapsed": false,
            },
            "rightPanelConfiguration": {
              "RightPanel": [Function],
            },
            "scanMetadata": {
              "targetAppInfo": {
                "name": "name",
                "url": "url",
              },
            },
            "selectedTest": -1,
            "setSideNavOpen": [Function],
            "switcherNavConfiguration": [Circular],
            "tabStopsViewStoreData": {
              "failureInstanceState": {},
            },
            "tabStoreData": {
              "isChanged": false,
              "isClosed": false,
              "isOriginChanged": false,
              "isPageHidden": false,
            },
            "visualizationConfigurationFactory": {},
            "visualizationScanResultData": {
              "accessibleNames": {
                "fullAxeResultsMap": null,
                "fullIdToRuleResultMap": null,
                "scanResult": null,
              },
              "color": {
                "fullAxeResultsMap": null,
                "fullIdToRuleResultMap": null,
                "scanResult": null,
              },
              "headings": {
                "fullAxeResultsMap": null,
                "fullIdToRuleResultMap": null,
                "scanResult": null,
              },
              "issues": {
                "fullAxeResultsMap": null,
                "fullIdToRuleResultMap": null,
                "scanResult": null,
              },
              "landmarks": {
                "fullAxeResultsMap": null,
                "fullIdToRuleResultMap": null,
                "scanResult": null,
              },
              "needsReview": {
                "fullAxeResultsMap": null,
                "fullIdToRuleResultMap": null,
                "scanResult": null,
              },
              "tabStops": {
                "needToCollectTabbingResults": true,
                "requirements": {
                  "focus-indicator": {
                    "instances": [],
                    "isExpanded": false,
                    "status": "unknown",
                  },
                  "input-focus": {
                    "instances": [],
                    "isExpanded": false,
                    "status": "unknown",
                  },
                  "keyboard-navigation": {
                    "instances": [],
                    "isExpanded": false,
                    "status": "unknown",
                  },
                  "keyboard-traps": {
                    "instances": [],
                    "isExpanded": false,
                    "status": "unknown",
                  },
                  "tab-order": {
                    "instances": [],
                    "isExpanded": false,
                    "status": "unknown",
                  },
                },
                "tabbedElements": null,
                "tabbingCompleted": false,
              },
            },
            "visualizationStoreData": {
              "focusedTarget": null,
              "injectingState": "notInjecting",
              "scanning": null,
              "selectedAdhocDetailsView": 1,
              "selectedDetailsViewPivot": 0,
              "selectedFastPassDetailsView": 1,
              "tests": {
                "adhoc": {
                  "accessibleNames": {
                    "enabled": false,
                  },
                  "color": {
                    "enabled": false,
                  },
                  "headings": {
                    "enabled": false,
                  },
                  "issues": {
                    "enabled": false,
                  },
                  "landmarks": {
                    "enabled": false,
                  },
                  "needsReview": {
                    "enabled": false,
                  },
                  "tabStops": {
                    "enabled": false,
                  },
                },
                "assessments": {
                  "audioVideoOnly": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "automated-checks": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "cognitive": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "color": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "contrast": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "customWidgets": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "errors": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "headings": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "images": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "keyboardInteraction": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "landmarks": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "language": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "linksAssessment": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "liveMultimedia": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "nativeWidgets": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "page": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "parsing": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "pointerMotion": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "prerecordedMultimedia": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "repetitiveContent": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "semanticsAssessment": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "sequence": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "textLegibility": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "timedEvents": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "visibleFocusOrder": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                },
                "quickAssess": {
                  "automated-checks": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "contrast": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "headings": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "images": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "keyboardInteraction": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "linksAssessment": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "nativeWidgets": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "repetitiveContent": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "textLegibility": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                  "visibleFocusOrder": {
                    "enabled": false,
                    "stepStatus": {},
                  },
                },
              },
            },
          },
          {},
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": <mock-QuickAssessCommandBar
            assessmentStoreData={
              {
                "assessmentNavState": {
                  "selectedTestSubview": "sample test step",
                },
                "assessments": {
                  "assessment": {
                    "fullAxeResultsMap": {},
                    "generatedAssessmentInstancesMap": {},
                    "manualTestStepResultMap": {},
                    "testStepStatus": {
                      "step-1": {
                        "isStepScanned": false,
                        "stepFinalResult": 1,
                      },
                    },
                  },
                },
                "persistedTabInfo": {},
                "resultDescription": "",
              }
            }
            automatedChecksCardsViewData={
              {
                "allCardsCollapsed": true,
                "cards": {
                  "fail": [
                    {
                      "description": "sample-description",
                      "guidance": [
                        {
                          "href": "sample-guidance-href",
                          "text": "sample-guidance-text",
                        },
                      ],
                      "id": "some-rule",
                      "nodes": [
                        {
                          "descriptors": {
                            "snippet": "this is a sample snippet",
                          },
                          "identifiers": {
                            "conciseName": "body img",
                            "css-selector": "body img",
                            "identifier": "body img",
                          },
                          "resolution": {
                            "how-to-fix-web": {
                              "all": [],
                              "any": [
                                "Element does not have an alt attribute",
                                "aria-label attribute does not exist or is empty",
                                "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                              ],
                              "none": [],
                            },
                            "howToFixSummary": "sample how to fix summary",
                          },
                          "ruleId": "image-alt",
                          "status": "fail",
                          "uid": "some-guid-here",
                        },
                      ],
                      "url": "sample-url",
                    },
                  ],
                  "inapplicable": [],
                  "pass": [],
                  "unknown": [],
                },
                "visualHelperEnabled": true,
              }
            }
            clickHandlerFactory={{}}
            dataTransferViewStoreData={
              {
                "showQuickAssessToAssessmentConfirmDialog": true,
              }
            }
            deps={
              {
                "detailsViewActionMessageCreator": {},
              }
            }
            detailsViewStoreData={
              {
                "detailsViewRightContentPanel": "Overview",
              }
            }
            featureFlagStoreData={{}}
            isSideNavOpen={false}
            narrowModeStatus={
              {
                "isHeaderAndNavCollapsed": false,
              }
            }
            rightPanelConfiguration={
              {
                "RightPanel": [Function],
              }
            }
            scanMetadata={
              {
                "targetAppInfo": {
                  "name": "name",
                  "url": "url",
                },
              }
            }
            selectedTest={-1}
            setSideNavOpen={[Function]}
            switcherNavConfiguration={[Circular]}
            tabStopsViewStoreData={
              {
                "failureInstanceState": {},
              }
            }
            tabStoreData={
              {
                "isChanged": false,
                "isClosed": false,
                "isOriginChanged": false,
                "isPageHidden": false,
              }
            }
            visualizationConfigurationFactory={{}}
            visualizationScanResultData={
              {
                "accessibleNames": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "color": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "headings": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "issues": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "landmarks": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "needsReview": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "tabStops": {
                  "needToCollectTabbingResults": true,
                  "requirements": {
                    "focus-indicator": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "input-focus": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "keyboard-navigation": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "keyboard-traps": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "tab-order": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                  },
                  "tabbedElements": null,
                  "tabbingCompleted": false,
                },
              }
            }
            visualizationStoreData={
              {
                "focusedTarget": null,
                "injectingState": "notInjecting",
                "scanning": null,
                "selectedAdhocDetailsView": 1,
                "selectedDetailsViewPivot": 0,
                "selectedFastPassDetailsView": 1,
                "tests": {
                  "adhoc": {
                    "accessibleNames": {
                      "enabled": false,
                    },
                    "color": {
                      "enabled": false,
                    },
                    "headings": {
                      "enabled": false,
                    },
                    "issues": {
                      "enabled": false,
                    },
                    "landmarks": {
                      "enabled": false,
                    },
                    "needsReview": {
                      "enabled": false,
                    },
                    "tabStops": {
                      "enabled": false,
                    },
                  },
                  "assessments": {
                    "audioVideoOnly": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "automated-checks": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "cognitive": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "color": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "contrast": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "customWidgets": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "errors": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "headings": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "images": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "keyboardInteraction": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "landmarks": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "language": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "linksAssessment": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "liveMultimedia": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "nativeWidgets": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "page": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "parsing": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "pointerMotion": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "prerecordedMultimedia": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "repetitiveContent": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "semanticsAssessment": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "sequence": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "textLegibility": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "timedEvents": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "visibleFocusOrder": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                  },
                  "quickAssess": {
                    "automated-checks": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "contrast": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "headings": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "images": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "keyboardInteraction": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "linksAssessment": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "nativeWidgets": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "repetitiveContent": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "textLegibility": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "visibleFocusOrder": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                  },
                },
              }
            }
          />,
        },
      ],
    },
    "LeftNav": [Function],
    "ReportExportDialogFactory": [Function],
    "StartOverComponentFactory": {},
  },
  "tabStopsViewStoreData": {
    "failureInstanceState": {},
  },
  "tabStoreData": {
    "isChanged": false,
    "isClosed": false,
    "isOriginChanged": false,
    "isPageHidden": false,
  },
  "visualizationConfigurationFactory": {},
  "visualizationScanResultData": {
    "accessibleNames": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "color": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "headings": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "issues": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "landmarks": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "needsReview": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "tabStops": {
      "needToCollectTabbingResults": true,
      "requirements": {
        "focus-indicator": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "input-focus": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "keyboard-navigation": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "keyboard-traps": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "tab-order": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
      },
      "tabbedElements": null,
      "tabbingCompleted": false,
    },
  },
  "visualizationStoreData": {
    "focusedTarget": null,
    "injectingState": "notInjecting",
    "scanning": null,
    "selectedAdhocDetailsView": 1,
    "selectedDetailsViewPivot": 0,
    "selectedFastPassDetailsView": 1,
    "tests": {
      "adhoc": {
        "accessibleNames": {
          "enabled": false,
        },
        "color": {
          "enabled": false,
        },
        "headings": {
          "enabled": false,
        },
        "issues": {
          "enabled": false,
        },
        "landmarks": {
          "enabled": false,
        },
        "needsReview": {
          "enabled": false,
        },
        "tabStops": {
          "enabled": false,
        },
      },
      "assessments": {
        "audioVideoOnly": {
          "enabled": false,
          "stepStatus": {},
        },
        "automated-checks": {
          "enabled": false,
          "stepStatus": {},
        },
        "cognitive": {
          "enabled": false,
          "stepStatus": {},
        },
        "color": {
          "enabled": false,
          "stepStatus": {},
        },
        "contrast": {
          "enabled": false,
          "stepStatus": {},
        },
        "customWidgets": {
          "enabled": false,
          "stepStatus": {},
        },
        "errors": {
          "enabled": false,
          "stepStatus": {},
        },
        "headings": {
          "enabled": false,
          "stepStatus": {},
        },
        "images": {
          "enabled": false,
          "stepStatus": {},
        },
        "keyboardInteraction": {
          "enabled": false,
          "stepStatus": {},
        },
        "landmarks": {
          "enabled": false,
          "stepStatus": {},
        },
        "language": {
          "enabled": false,
          "stepStatus": {},
        },
        "linksAssessment": {
          "enabled": false,
          "stepStatus": {},
        },
        "liveMultimedia": {
          "enabled": false,
          "stepStatus": {},
        },
        "nativeWidgets": {
          "enabled": false,
          "stepStatus": {},
        },
        "page": {
          "enabled": false,
          "stepStatus": {},
        },
        "parsing": {
          "enabled": false,
          "stepStatus": {},
        },
        "pointerMotion": {
          "enabled": false,
          "stepStatus": {},
        },
        "prerecordedMultimedia": {
          "enabled": false,
          "stepStatus": {},
        },
        "repetitiveContent": {
          "enabled": false,
          "stepStatus": {},
        },
        "semanticsAssessment": {
          "enabled": false,
          "stepStatus": {},
        },
        "sequence": {
          "enabled": false,
          "stepStatus": {},
        },
        "textLegibility": {
          "enabled": false,
          "stepStatus": {},
        },
        "timedEvents": {
          "enabled": false,
          "stepStatus": {},
        },
        "visibleFocusOrder": {
          "enabled": false,
          "stepStatus": {},
        },
      },
      "quickAssess": {
        "automated-checks": {
          "enabled": false,
          "stepStatus": {},
        },
        "contrast": {
          "enabled": false,
          "stepStatus": {},
        },
        "headings": {
          "enabled": false,
          "stepStatus": {},
        },
        "images": {
          "enabled": false,
          "stepStatus": {},
        },
        "keyboardInteraction": {
          "enabled": false,
          "stepStatus": {},
        },
        "linksAssessment": {
          "enabled": false,
          "stepStatus": {},
        },
        "nativeWidgets": {
          "enabled": false,
          "stepStatus": {},
        },
        "repetitiveContent": {
          "enabled": false,
          "stepStatus": {},
        },
        "textLegibility": {
          "enabled": false,
          "stepStatus": {},
        },
        "visibleFocusOrder": {
          "enabled": false,
          "stepStatus": {},
        },
      },
    },
  },
}
`;

exports[`DetailsViewBody render render: QuickAssessCommandBar props 1`] = `
{
  "assessmentStoreData": {
    "assessmentNavState": {
      "selectedTestSubview": "sample test step",
    },
    "assessments": {
      "assessment": {
        "fullAxeResultsMap": {},
        "generatedAssessmentInstancesMap": {},
        "manualTestStepResultMap": {},
        "testStepStatus": {
          "step-1": {
            "isStepScanned": false,
            "stepFinalResult": 1,
          },
        },
      },
    },
    "persistedTabInfo": {},
    "resultDescription": "",
  },
  "automatedChecksCardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "clickHandlerFactory": {},
  "dataTransferViewStoreData": {
    "showQuickAssessToAssessmentConfirmDialog": true,
  },
  "deps": {
    "detailsViewActionMessageCreator": {},
  },
  "detailsViewStoreData": {
    "detailsViewRightContentPanel": "Overview",
  },
  "featureFlagStoreData": {},
  "isSideNavOpen": false,
  "narrowModeStatus": {
    "isHeaderAndNavCollapsed": false,
  },
  "rightPanelConfiguration": {
    "RightPanel": [Function],
  },
  "scanMetadata": {
    "targetAppInfo": {
      "name": "name",
      "url": "url",
    },
  },
  "selectedTest": -1,
  "setSideNavOpen": [Function],
  "switcherNavConfiguration": {
    "CommandBar": [MockFunction] {
      "calls": [
        [
          [Circular],
          {},
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": <mock-QuickAssessCommandBar
            assessmentStoreData={
              {
                "assessmentNavState": {
                  "selectedTestSubview": "sample test step",
                },
                "assessments": {
                  "assessment": {
                    "fullAxeResultsMap": {},
                    "generatedAssessmentInstancesMap": {},
                    "manualTestStepResultMap": {},
                    "testStepStatus": {
                      "step-1": {
                        "isStepScanned": false,
                        "stepFinalResult": 1,
                      },
                    },
                  },
                },
                "persistedTabInfo": {},
                "resultDescription": "",
              }
            }
            automatedChecksCardsViewData={
              {
                "allCardsCollapsed": true,
                "cards": {
                  "fail": [
                    {
                      "description": "sample-description",
                      "guidance": [
                        {
                          "href": "sample-guidance-href",
                          "text": "sample-guidance-text",
                        },
                      ],
                      "id": "some-rule",
                      "nodes": [
                        {
                          "descriptors": {
                            "snippet": "this is a sample snippet",
                          },
                          "identifiers": {
                            "conciseName": "body img",
                            "css-selector": "body img",
                            "identifier": "body img",
                          },
                          "resolution": {
                            "how-to-fix-web": {
                              "all": [],
                              "any": [
                                "Element does not have an alt attribute",
                                "aria-label attribute does not exist or is empty",
                                "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                              ],
                              "none": [],
                            },
                            "howToFixSummary": "sample how to fix summary",
                          },
                          "ruleId": "image-alt",
                          "status": "fail",
                          "uid": "some-guid-here",
                        },
                      ],
                      "url": "sample-url",
                    },
                  ],
                  "inapplicable": [],
                  "pass": [],
                  "unknown": [],
                },
                "visualHelperEnabled": true,
              }
            }
            clickHandlerFactory={{}}
            dataTransferViewStoreData={
              {
                "showQuickAssessToAssessmentConfirmDialog": true,
              }
            }
            deps={
              {
                "detailsViewActionMessageCreator": {},
              }
            }
            detailsViewStoreData={
              {
                "detailsViewRightContentPanel": "Overview",
              }
            }
            featureFlagStoreData={{}}
            isSideNavOpen={false}
            narrowModeStatus={
              {
                "isHeaderAndNavCollapsed": false,
              }
            }
            rightPanelConfiguration={
              {
                "RightPanel": [Function],
              }
            }
            scanMetadata={
              {
                "targetAppInfo": {
                  "name": "name",
                  "url": "url",
                },
              }
            }
            selectedTest={-1}
            setSideNavOpen={[Function]}
            switcherNavConfiguration={[Circular]}
            tabStopsViewStoreData={
              {
                "failureInstanceState": {},
              }
            }
            tabStoreData={
              {
                "isChanged": false,
                "isClosed": false,
                "isOriginChanged": false,
                "isPageHidden": false,
              }
            }
            visualizationConfigurationFactory={{}}
            visualizationScanResultData={
              {
                "accessibleNames": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "color": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "headings": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "issues": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "landmarks": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "needsReview": {
                  "fullAxeResultsMap": null,
                  "fullIdToRuleResultMap": null,
                  "scanResult": null,
                },
                "tabStops": {
                  "needToCollectTabbingResults": true,
                  "requirements": {
                    "focus-indicator": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "input-focus": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "keyboard-navigation": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "keyboard-traps": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                    "tab-order": {
                      "instances": [],
                      "isExpanded": false,
                      "status": "unknown",
                    },
                  },
                  "tabbedElements": null,
                  "tabbingCompleted": false,
                },
              }
            }
            visualizationStoreData={
              {
                "focusedTarget": null,
                "injectingState": "notInjecting",
                "scanning": null,
                "selectedAdhocDetailsView": 1,
                "selectedDetailsViewPivot": 0,
                "selectedFastPassDetailsView": 1,
                "tests": {
                  "adhoc": {
                    "accessibleNames": {
                      "enabled": false,
                    },
                    "color": {
                      "enabled": false,
                    },
                    "headings": {
                      "enabled": false,
                    },
                    "issues": {
                      "enabled": false,
                    },
                    "landmarks": {
                      "enabled": false,
                    },
                    "needsReview": {
                      "enabled": false,
                    },
                    "tabStops": {
                      "enabled": false,
                    },
                  },
                  "assessments": {
                    "audioVideoOnly": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "automated-checks": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "cognitive": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "color": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "contrast": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "customWidgets": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "errors": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "headings": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "images": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "keyboardInteraction": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "landmarks": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "language": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "linksAssessment": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "liveMultimedia": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "nativeWidgets": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "page": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "parsing": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "pointerMotion": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "prerecordedMultimedia": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "repetitiveContent": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "semanticsAssessment": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "sequence": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "textLegibility": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "timedEvents": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "visibleFocusOrder": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                  },
                  "quickAssess": {
                    "automated-checks": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "contrast": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "headings": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "images": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "keyboardInteraction": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "linksAssessment": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "nativeWidgets": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "repetitiveContent": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "textLegibility": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                    "visibleFocusOrder": {
                      "enabled": false,
                      "stepStatus": {},
                    },
                  },
                },
              }
            }
          />,
        },
      ],
    },
    "LeftNav": [Function],
    "ReportExportDialogFactory": [Function],
    "StartOverComponentFactory": {},
  },
  "tabStopsViewStoreData": {
    "failureInstanceState": {},
  },
  "tabStoreData": {
    "isChanged": false,
    "isClosed": false,
    "isOriginChanged": false,
    "isPageHidden": false,
  },
  "visualizationConfigurationFactory": {},
  "visualizationScanResultData": {
    "accessibleNames": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "color": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "headings": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "issues": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "landmarks": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "needsReview": {
      "fullAxeResultsMap": null,
      "fullIdToRuleResultMap": null,
      "scanResult": null,
    },
    "tabStops": {
      "needToCollectTabbingResults": true,
      "requirements": {
        "focus-indicator": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "input-focus": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "keyboard-navigation": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "keyboard-traps": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
        "tab-order": {
          "instances": [],
          "isExpanded": false,
          "status": "unknown",
        },
      },
      "tabbedElements": null,
      "tabbingCompleted": false,
    },
  },
  "visualizationStoreData": {
    "focusedTarget": null,
    "injectingState": "notInjecting",
    "scanning": null,
    "selectedAdhocDetailsView": 1,
    "selectedDetailsViewPivot": 0,
    "selectedFastPassDetailsView": 1,
    "tests": {
      "adhoc": {
        "accessibleNames": {
          "enabled": false,
        },
        "color": {
          "enabled": false,
        },
        "headings": {
          "enabled": false,
        },
        "issues": {
          "enabled": false,
        },
        "landmarks": {
          "enabled": false,
        },
        "needsReview": {
          "enabled": false,
        },
        "tabStops": {
          "enabled": false,
        },
      },
      "assessments": {
        "audioVideoOnly": {
          "enabled": false,
          "stepStatus": {},
        },
        "automated-checks": {
          "enabled": false,
          "stepStatus": {},
        },
        "cognitive": {
          "enabled": false,
          "stepStatus": {},
        },
        "color": {
          "enabled": false,
          "stepStatus": {},
        },
        "contrast": {
          "enabled": false,
          "stepStatus": {},
        },
        "customWidgets": {
          "enabled": false,
          "stepStatus": {},
        },
        "errors": {
          "enabled": false,
          "stepStatus": {},
        },
        "headings": {
          "enabled": false,
          "stepStatus": {},
        },
        "images": {
          "enabled": false,
          "stepStatus": {},
        },
        "keyboardInteraction": {
          "enabled": false,
          "stepStatus": {},
        },
        "landmarks": {
          "enabled": false,
          "stepStatus": {},
        },
        "language": {
          "enabled": false,
          "stepStatus": {},
        },
        "linksAssessment": {
          "enabled": false,
          "stepStatus": {},
        },
        "liveMultimedia": {
          "enabled": false,
          "stepStatus": {},
        },
        "nativeWidgets": {
          "enabled": false,
          "stepStatus": {},
        },
        "page": {
          "enabled": false,
          "stepStatus": {},
        },
        "parsing": {
          "enabled": false,
          "stepStatus": {},
        },
        "pointerMotion": {
          "enabled": false,
          "stepStatus": {},
        },
        "prerecordedMultimedia": {
          "enabled": false,
          "stepStatus": {},
        },
        "repetitiveContent": {
          "enabled": false,
          "stepStatus": {},
        },
        "semanticsAssessment": {
          "enabled": false,
          "stepStatus": {},
        },
        "sequence": {
          "enabled": false,
          "stepStatus": {},
        },
        "textLegibility": {
          "enabled": false,
          "stepStatus": {},
        },
        "timedEvents": {
          "enabled": false,
          "stepStatus": {},
        },
        "visibleFocusOrder": {
          "enabled": false,
          "stepStatus": {},
        },
      },
      "quickAssess": {
        "automated-checks": {
          "enabled": false,
          "stepStatus": {},
        },
        "contrast": {
          "enabled": false,
          "stepStatus": {},
        },
        "headings": {
          "enabled": false,
          "stepStatus": {},
        },
        "images": {
          "enabled": false,
          "stepStatus": {},
        },
        "keyboardInteraction": {
          "enabled": false,
          "stepStatus": {},
        },
        "linksAssessment": {
          "enabled": false,
          "stepStatus": {},
        },
        "nativeWidgets": {
          "enabled": false,
          "stepStatus": {},
        },
        "repetitiveContent": {
          "enabled": false,
          "stepStatus": {},
        },
        "textLegibility": {
          "enabled": false,
          "stepStatus": {},
        },
        "visibleFocusOrder": {
          "enabled": false,
          "stepStatus": {},
        },
      },
    },
  },
}
`;

exports[`DetailsViewBody render render: TargetPageHiddenBar props 1`] = `
{
  "isTargetPageHidden": false,
}
`;
